--- a/javaTest/WebContent/WEB-INF/web.xml
+++ b/javaTest/WebContent/WEB-INF/web.xml
@@ -9,6 +9,102 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <error-page>
+    <error-code>400</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>401</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>402</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>403</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>405</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>406</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>407</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>408</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>409</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>410</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>411</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>412</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>413</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>414</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>415</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>416</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>417</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>501</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>502</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>503</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>504</error-code>
+    <location>/common/error.html</location>
+  </error-page>
+  <error-page>
+    <error-code>505</error-code>
+    <location>/common/error.html</location>
+  </error-page>
   <security-constraint>
 		<display-name>SecurityConstraint</display-name>
 		<web-resource-collection>
